removed depedency on jbossws-native as tests can rely on the JDK default impl classes
git-svn-id: https://svn.jboss.org/repos/picketlink/federation/trunk@214 cbddccc4-e45a-42eb-be77-0d76e4b45d38